--- a/src/component/Photography/Photography.scss
+++ b/src/component/Photography/Photography.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-bottom: 30px;
+  background: rgb(39, 39, 39);
   .zg-photography-header {
     margin-top: 40px;
   }
