--- a/src/component/Podcast/Podcast.scss
+++ b/src/component/Podcast/Podcast.scss
@@ -2,7 +2,6 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  background: rgb(39, 39, 39);
   padding: 10px 0 50px 0;
 
   .zg-podcast-logo {
